﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1216: Fix issue with determining the tile storage location on some devices without removable storage.

1214: Update default preset, imagery and translations, fix various smaller bugs.

1211: Update default preset and translations, try to improve debugging for tile cache problems and numerous robustness fixes.

1208: Update default preset and translations.

1206: improve entering of website tags, some UI cleanup, catch weird error when opening tile database on some devices, numerous small bug fixes, updated translations

1205: deselect elements when finishing multi-select mode (regression), protect against SQLiteCantOpenDatabaseException not being caught. Changes for F-Droid.

1204: fix broken default preset, protect against crash if linked preset is missing.

1203: fix more crashes, calculate rough centroid of relations if possible.

1202: update default preset, increase number of lines for very long (German) key descriptions, fix some crashes.

1201: update ids correctly after reading an .osm file. Fix Samsung 4.3 specific issue https://groups.google.com/forum/#!topic/android-developers/U3N9eL5BcJk
 
1200: fix post-release issues with documentation, UI and NPE in tag form, version and build number bump.

1199: small bug fixes and documentation updates, change version to reflect release.

1198: fix regression wrt deleting, copying and cutting tags in the form UI

1197: use back key a bit more consistently, re-fix element info layout, fix regression wrt displaying object history, disable property editor layout changes when restarting, correctly use values_context and don't sort check values

1196: order tags in form as they are in the preset and group i18n name tags.

1194: correctly add newly created elements to API storage when reading a JOSM style file.

1193: refactoring, save follow GPS state over pause - resume cycles, documentation updates.
