@@ -1,0 +1,26 @@
+<?xml version='1.0' encoding='utf-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+</head>
+<body>
+<h1>Vespucci 0.9.9 Highlights</h1><h2>Indoor Mode</h2><p>Long pressing the lock icon will cycle through</p>
+<ul>
+  <li>Normal editing mode</li>
+  <li>Tag only mode</li>
+  <li>Indoor editing mode</li>
+</ul><p>In indoor mode the displayed level can be changed with the up/down buttons, tapping the level display button will show everything that doesn’t have a level tag (roughly, it is slightly more complicated than that). </p><h2>Changed "Geometry Improvement Handle" behaviour</h2><p>Geometry improvement handles on ways now work as they do with iD: </p>
+<ul>
+  <li>Select way</li>
+  <li>Drag handle (default rendering is a red x)</li>
+  <li>Way remains selected</li>
+  <li>Drag handle</li>
+  <li>.. and so on ...</li>
+</ul><p>The tradeoff is that now more care has to be exercised when dragging ways.</p><h2>Tag based filter</h2><p>The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon.</p><p>The full change log is available here https://github.com/MarcusWolschon/osmeditor4android/commits/master </p><h1>Upgrading from previous Versions</h1>
+<ul>
+  <li>The saved editing state file format has changed, please complete any edits before upgrading.</li>
+  <li>For known problems with the beta build please see https://github.com/MarcusWolschon/osmeditor4android/issues</li>
+</ul>
+</body>
+</html>
