@@ -1,0 +1,35 @@
+# Vespucci 0.9.9 Highlights
+
+## Indoor Mode
+
+Long pressing the lock icon will cycle through
+
+ * Normal editing mode
+ * Tag only mode
+ * Indoor editing mode
+   
+In indoor mode the displayed level can be changed with the up/down buttons, tapping the level display button will show everything that doesn’t have a level tag (roughly, it is slightly more complicated than that). 
+ 
+## Changed "Geometry Improvement Handle" behaviour
+ 
+Geometry improvement handles on ways now work as they do with iD: 
+
+ * Select way
+ * Drag handle (default rendering is a red x)
+ * Way remains selected
+ * Drag handle
+ * .. and so on ...
+        
+The tradeoff is that now more care has to be exercised when dragging ways.
+	
+## Tag based filter
+
+The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon.
+	
+The full change log is available here https://github.com/MarcusWolschon/osmeditor4android/commits/master 
+
+# Upgrading from previous Versions
+
+* The saved editing state file format has changed, please complete any edits before upgrading.
+* For known problems with the beta build please see https://github.com/MarcusWolschon/osmeditor4android/issues
+
